--- a/moduleA/pom.xml
+++ b/moduleA/pom.xml
@@ -7,6 +7,9 @@
     <artifactId>projet-multimodules</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
+    <properties>
+  <sonar.projectKey>jbwittner_projet-multimodules_aa</sonar.projectKey>
+</properties>
   <groupId>com.votreentreprise</groupId>
   <artifactId>moduleA</artifactId>
   <version>1.0-SNAPSHOT</version>
