--- a/moduleC/pom.xml
+++ b/moduleC/pom.xml
@@ -9,6 +9,10 @@
   </parent>
   <groupId>com.votreentreprise</groupId>
   <artifactId>moduleC</artifactId>
+        <properties>
+  <sonar.projectKey>jbwittner_projet-multimodules_cc</sonar.projectKey>
+</properties>
+
   <version>1.0-SNAPSHOT</version>
   <name>moduleC</name>
   <url>http://maven.apache.org</url>
