--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,9 @@
   <url>http://maven.apache.org</url>
         
     <properties>
+         <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
+
   <sonar.organization>jbwittner</sonar.organization>
   <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 </properties>
