--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -61,8 +61,9 @@ jobs:
         working-directory: moduleB
         run: mvn clean install
       - name: Build and analyze
-        working-directory: moduleC
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+        run: |
+          cd moduleC
+          mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
